--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Matthew Twist Personal Portfolio</title>
         <link rel="stylesheet" href="style.css" />
-        <script src="myscripts.js"></script>
+        <script src="javascript.js"></script>
         
     </head>
 
