--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
                     </p>
                     <p>- John Wayne</p>
                 </blockquote>
+                <button id="helloButton">Click me</button>
             </div>
         </section>
     </body>
+    <footer>
+            <p> Spacebook </p>
+    </footer>
+    
 </html>
