--- a/about.html
+++ b/about.html
@@ -30,9 +30,11 @@
             <title>About Us</title>
             <link rel="stylesheet" href="styles.css">
         </head>
-        
+      
             <section class="content">
                 <div class="text">
+                    <h1>About Us!</h1>
+                    <br>
                     <h2>Making life better!</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut dui id urna suscipit gravida. Fusce
                         vehicula eros in nulla cursus, vitae dapibus elit pulvinar. Morbi et ante ut nisl sollicitudin
