--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>Matthew Twist</h1>
             </div>
             <div class="nav-right">
-                <a href="index.html">Home</a>
+                <a class=active href="index.html">Home</a>
 
                 <a href="about.html">About</a>
 
@@ -32,25 +32,22 @@
                 <img src="Broken_laptop.jpeg" alt="Your Photo" />
             </div>
             <div class="content">
-                <h1>Making Technology Accessible for All Ages</h1>
+                <h1>Making Technology Work Smarter</h1>
                 <p>
-                    My mission is to break down barriers and ensure that
-                    technology is user-friendly for every age group.
+                    My mission is to break down barriers and launch all people into the future that is inevetible!
                 </p>
                 <blockquote>
                     <p>
-                        <q>Courage is being scared to death, but saddling up
-                        anyway. Tomorrow is the most important thing in
-                        life.</q>
+                        <q>The only this we have to fear is fear itself.</q>
                     </p>
-                    <p>- John Wayne</p>
+                    <p>-Franklin D. Roosevelt</p>
                 </blockquote>
                 <button id="helloButton">Click me</button>
             </div>
         </section>
     </body>
     <footer>
-            <p> Spacebook </p>
+            <p> <img class=logo1 src="spacebook.png" height="45" width="45" alt="Logo"> </p>
     </footer>
     
 </html>
