updated contact for NAV

--- a/about.html
+++ b/about.html
@@ -21,6 +21,8 @@
                     <a class=active href="about.html">About</a>
     
                     <a href="portfolio.html">Portfolio</a>
+
+                    <a href="contact.html">Contact</a>
                 
                 </div>
              </nav>
