--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <a href="about.html">About</a>
 
                 <a href="portfolio.html">Portfolio</a>
+
+                <a href="contact.html">Contact</a>
             
             </div>
          </nav>
@@ -38,7 +40,7 @@
                 </p>
                 <blockquote>
                     <p>
-                        <q>The only this we have to fear is fear itself.</q>
+                        <q>The only thing we have to fear is fear itself.</q>
                     </p>
                     <p>-Franklin D. Roosevelt</p>
                 </blockquote>
