--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,8 @@
                     <a href="about.html">About</a>
     
                     <a class=active href="portfolio.html">Portfolio</a>
+
+                    <a href="contact.html">Contact</a>
                 
                 </div>
              </nav>
