--- a/contact.html
+++ b/contact.html
@@ -27,3 +27,7 @@
          </nav>
     
         <!-- website start -->
+        <footer>
+            <p> <img class=logo1 src="spacebook.png" height="45" width="45" alt="Logo"> </p>
+        </footer>
+    </body>
