--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
             </section>
         
             <footer>
-                <p> Spacedbook </p>
+                <p> <img class=logo1 src="spacebook.png" height="45" width="45" alt="Logo"> </p>
             </footer>
         </body>
         
