--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </header>
         <!-- website start -->
         
-    <section class="second">
+    <section>
         <div class="container"> 
             <div class="photo">
                 <img src="Broken_laptop.jpeg" alt="Your Photo" />
